--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,11 @@
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.android.application' version '7.4.0' apply false
+    id 'com.android.library' version '7.4.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
 
 ext {
-    dotDocumentVersion = '3.7.1'
-    dotFaceVersion = '4.11.0'
-    dotNfcVersion = '2.3.4'
+    dotVersion = '5.0.0'
     navigationVersion = '2.5.3'
 }
 
