--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 1
-        versionName '4.10.0'
+        versionName '4.11.0'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
@@ -42,7 +42,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
-    implementation 'com.gemalto.jp2:jp2-android:1.0.3'
+    implementation 'com.github.Tgo1014:JP2ForAndroid:1.0.4'
     implementation 'com.google.android.material:material:1.8.0'
     implementation "com.innovatrics.dot:dot-document:$dotVersion"
     implementation "com.innovatrics.dot:dot-face-detection-fast:$dotVersion"
