--- a/.editorconfig
+++ b/.editorconfig
@@ -1,2 +1,5 @@
 [*.{kt, kts}]
+ij_kotlin_allow_trailing_comma = true
+ij_kotlin_allow_trailing_comma_on_call_site = true
+indent_size = unset
 max_line_length = off
