--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'org.jlleitschuh.gradle.ktlint' version '11.1.0'
+    id 'org.jlleitschuh.gradle.ktlint'
 }
 
 android {
@@ -13,7 +13,7 @@ android {
         minSdk 21
         targetSdk 33
         versionCode 1
-        versionName '4.13.0'
+        versionName '4.14.0'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
