--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.22' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version '11.6.1' apply false
 }
 
 ext {
-    dotVersion = '6.0.0'
+    dotVersion = '6.5.1'
     navigationVersion = '2.6.0'
 }
 
