--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,7 @@
-[*.{kt, kts}]
+[*.{kt,kts}]
 ij_kotlin_allow_trailing_comma = true
 ij_kotlin_allow_trailing_comma_on_call_site = true
-indent_size = unset
+ktlint_code_style = android_studio
+ktlint_standard_enum-wrapping = disabled
+ktlint_standard_function-signature = disabled
 max_line_length = off
