--- a/.editorconfig
+++ b/.editorconfig
@@ -4,4 +4,5 @@ ij_kotlin_allow_trailing_comma_on_call_site = true
 ktlint_code_style = android_studio
 ktlint_standard_enum-wrapping = disabled
 ktlint_standard_function-signature = disabled
+ktlint_standard_function-expression-body = disabled
 max_line_length = off
