--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,16 +4,15 @@ androidxNavigation = "2.9.4"
 comAndroid = "8.13.0"
 orgJetbrainsKotlinAndroid = "1.9.24"
 orgJlleitschuhGradleKtlint = "13.1.0"
-comGithubTgo1014JP2ForAndroid = "1.0.4"
 comGoogleAndroidMaterial = "1.13.0"
 comGoogleCodeGson = "2.13.2"
-comInnovatricsDot = "8.15.1"
+comInnovatricsDot = "8.16.0"
+devKeijiJp2Android = "1.0.5"
 
 [libraries]
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidxConstraintlayout" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidxNavigation" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidxNavigation" }
-com-github-tgo1014-jp2ForAndroid = { group = "com.github.Tgo1014", name = "JP2ForAndroid", version.ref = "comGithubTgo1014JP2ForAndroid" }
 com-google-android-material = { group = "com.google.android.material", name = "material", version.ref = "comGoogleAndroidMaterial" }
 com-google-code-gson = { module = "com.google.code.gson:gson", version.ref = "comGoogleCodeGson" }
 com-innovatrics-dot-document = { group = "com.innovatrics.dot", name = "dot-document", version.ref = "comInnovatricsDot" }
@@ -21,6 +20,7 @@ com-innovatrics-dot-face-detection-fast = { group = "com.innovatrics.dot", name 
 com-innovatrics-dot-face-expression-neutral = { group = "com.innovatrics.dot", name = "dot-face-expression-neutral", version.ref = "comInnovatricsDot" }
 com-innovatrics-dot-nfc = { group = "com.innovatrics.dot", name = "dot-nfc", version.ref = "comInnovatricsDot" }
 com-innovatrics-dot-palm-detection = { group = "com.innovatrics.dot", name = "dot-palm-detection", version.ref = "comInnovatricsDot" }
+dev-keiji-jp2-android = { group = "dev.keiji.jp2", name = "jp2-android", version.ref = "devKeijiJp2Android" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "comAndroid" }
